# storm-reprozip-proxy

./: .dockerignore  .editorconfig  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  last_build.txt  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: docker.yaml
.tx/: config
docker/base/: Dockerfile
docker/parser/: Dockerfile
docker/parser/src/: parser.go
docker/proxy/: Dockerfile
docker/proxy/tools/: proxy.sh
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
parser/: go.mod  go.sum  main.go
parser/parser/: model.go  parser.go
storm_reprozip_proxy/: __init__.py  cli.py  config.py  ext.py  proxy.py  version.py  views.py
storm_reprozip_proxy/helper/: __init__.py  busybox.py  reprozip.py
storm_reprozip_proxy/templates/storm_reprozip_proxy/: base.html  index.html
tests/: conftest.py  test_storm_reprozip_proxy.py
