[tool.poetry]
name = "storm-reprozip-proxy"
version = "0.1.0"
description = "CLI utility to enable file handling into Reprozip Docker environments."
authors = ["Felipe Carlos <felipe.carlos@inpe.br>"]
license = "MIT"
readme = "README.rst"
keywords = ["Storm Platform", "CLI tool", "Reprozip", "Utility"]
repository = "https://github.com/storm-platform/storm-reprozip-proxy"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 1 - Planning",
]

[tool.poetry.scripts]
storm-reprozip-proxy = "storm_reprozip_proxy.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
rpaths = ">=1.0.0,<1.1"
reprounzip = ">=1.1,<2.0"
click = { version = ">=7.1.0", optional = true }
Sphinx = { version = ">=3,<4", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[tool.poetry.extras]
docs = ["Sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
